--- a/config.json
+++ b/config.json
@@ -30,7 +30,7 @@
   },
   "antiInbox": false,
   "language": "en",
-  "nickNameBot": "𝐂𝐘𝐁𝐄𝐑 𝐆𝐎𝐀𝐓 𝐁𝐎𝐓 ᵁᴸᴸᴬˢᴴ",
+  "nickNameBot": "EX VUTU ➺🐱🥂🩷🪽",
   "prefix": "!",
   "usePrefix": {
     "enable": true,
